@@ -1,3 +1,8 @@
+2007-06-18  Derek Price  <derek@ximbiot.com>
+
+	* client.c (send_repository): Don't attempt to send metadata from CVS
+	subdirectories when importing.
+
 2007-06-15  Derek Price  <derek@ximbiot.com>
 
 	* import.c (import): Check more carefully for files and directories
