@@ -1,3 +1,7 @@
+2007-06-18  Derek Price  <derek@ximbiot.com>
+
+	* NEWS: Note import now keeps metadata to itself.
+
 2007-06-15  Derek Price  <derek@ximbiot.com>
 
 	* NEWS: Note `cvs import CVS-/CVS' fix.
